@@ -154,6 +154,11 @@ are noted in the comments column.
     <td>See the comments above for the <tt>NFile</tt> class.</td>
 </tr>
 <tr>
+    <td class="first"><tt>NExampleTriangulation::seifertWeber()</tt></td>
+    <td><tt>NExampleTriangulation::weberSeifert()</tt></td>
+    <td>&nbsp;</td>
+</tr>
+<tr>
     <td class="first"><tt>NLayeredLoop::getIndex()</tt></td>
     <td><tt>NLayeredLoop::getLength()</tt></td>
     <td>&nbsp;</td>
